--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
   </div>
 
   <div id="buttonDiv"></div>
-
+<button id="webviewLoginBtn">Continue with Google</button>
   <div id="userInfo">
     <img id="userPic" alt="User">
     <h3 id="userName"></h3>
@@ -36,3 +36,4 @@
   <script src="register.js"></script>
 </body>
 </html>
+
