--- a/register.html
+++ b/register.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Register — Hybrid Chat</title>
-  <link rel="icon" type="image/png" href="hybrid.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="register.css">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script src="https://apis.google.com/js/api.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Register — Hybrid Chat</title>
+<link rel="icon" type="image/png" href="hybrid.png">
+<link rel="stylesheet" href="register.css">
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-  <div class="bubble"></div>
-  <div class="bubble"></div>
-  <div class="bubble"></div>
 
-  
-  <div id="explorer">
-    <div class="header"><i class="fab fa-google-drive"></i> My Drive</div>
-    <div class="content" id="explorerContent"></div>
-  </div>
+<div class="container">
+  <h2>Welcome to Starlight</h2>
+  <p>Sign in with Google to continue</p>
 
   <div id="buttonDiv"></div>
-  <div id="userInfo">
-    <img id="userPic" alt="User">
-    <h3 id="userName"></h3>
+
+  <div id="profilePreview" class="hidden">
+    <h3>Profile Preview</h3>
+    <img id="userAvatar" alt="Avatar">
+    <p><strong>Name:</strong> <span id="userName"></span></p>
+    <p><strong>Email:</strong> <span id="userEmail"></span></p>
+    <button id="continueBtn">Continue</button>
   </div>
 
-  <div id="loadingOverlay">
-    <i class="fab fa-google-drive"></i>
-    <p>Syncing to your Google Drive...</p>
-  </div>
+  <div id="messageBox" class="hidden"></div>
+</div>
 
-  <script src="register.js"></script>
+<script src="register.js"></script>
 </body>
 </html>
-
-
