--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Realtime Chat — Hybrid</title>
+  <title>Starlight — Realtime Messaging</title>
   <link rel="icon" type="image/png" href="hybrid.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-  <i class="fa-solid fa-bolt floating"></i>
-  <i class="fa-solid fa-comments floating"></i>
-  <i class="fa-solid fa-cloud floating"></i>
-  <i class="fa-solid fa-paper-plane floating"></i>
+  <div class="bubble bubble1"></div>
+  <div class="bubble bubble2"></div>
+  <div class="bubble bubble3"></div>
 
   <div class="chat-card" id="chatCard">
-    <h1><i class="fas fa-comment-dots"></i> Realtime Chat</h1>
-    <p id="info">Connect instantly with friends, anytime and anywhere.</p>
+    <h1><i class="fas fa-comments-alt"></i> Hybrid Chat</h1>
+    <p id="info">Instant messaging for friends and teams. Secure, fast, and simple.</p>
 
     <div class="button-group">
-      <button id="startBtn"><i class="fas fa-paper-plane"></i> Get Started</button>
+      <button id="startBtn"><i class="fas fa-paper-plane"></i> Start Chatting</button>
     </div>
 
     <footer>© 2025 Dominex Macedon</footer>
