--- a/register.html
+++ b/register.html
@@ -8,6 +8,53 @@
 <link rel="stylesheet" href="register.css">
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f3f4f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  .container {
+    background: white;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+  }
+  #profilePreview {
+    margin-top: 20px;
+  }
+  #profilePreview.hidden, #messageBox.hidden {
+    display: none;
+  }
+  #userAvatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  #continueBtn {
+    padding: 8px 16px;
+    margin-top: 12px;
+    background-color: #3b82f6;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  #continueBtn:hover {
+    background-color: #2563eb;
+  }
+  #messageBox {
+    margin-top: 12px;
+    color: red;
+  }
+</style>
 </head>
 <body>
 
@@ -15,7 +62,7 @@
   <h2>Welcome to Starlight</h2>
   <p>Sign in with Google to continue</p>
 
-  <div id="buttonDiv"></div>
+  <div id="buttonDiv" style="display:flex; justify-content:center; margin-top:20px;"></div>
 
   <div id="profilePreview" class="hidden">
     <h3>Profile Preview</h3>
@@ -30,99 +77,113 @@
 
 <script>
   const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA";
+  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  const profilePreview = document.getElementById("profilePreview");
+  const userAvatar = document.getElementById("userAvatar");
+  const userName = document.getElementById("userName");
+  const userEmail = document.getElementById("userEmail");
+  const continueBtn = document.getElementById("continueBtn");
+  const messageBox = document.getElementById("messageBox");
 
-const profilePreview = document.getElementById("profilePreview");
-const userAvatar = document.getElementById("userAvatar");
-const userName = document.getElementById("userName");
-const userEmail = document.getElementById("userEmail");
-const continueBtn = document.getElementById("continueBtn");
-const messageBox = document.getElementById("messageBox");
-
-const storedProfile = localStorage.getItem("hc_profile");
-if (storedProfile) {
-  window.location.href = "/";
-}
-
-window.onload = () => {
-  google.accounts.id.initialize({
-    client_id: "549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com",
-    callback: handleCredentialResponse
-  });
-
-  google.accounts.id.renderButton(document.getElementById("buttonDiv"), {
-    theme: "outline",
-    size: "large",
-    text: "signin_with",
-    shape: "pill"
-  });
-};
-
-function handleCredentialResponse(response) {
-  try {
-    const data = JSON.parse(atob(response.credential.split('.')[1]));
-    userAvatar.src = data.picture;
-    userName.textContent = data.name;
-    userEmail.textContent = data.email;
-
-    profilePreview.classList.remove("hidden");
-
-    window.currentProfile = {
-      id: data.sub,
-      name: data.name,
-      email: data.email,
-      profile_url: data.picture
-    };
-  } catch (err) {
-    showMessage("Failed to parse Google profile.");
+  // Redirect if already signed in
+  const storedProfile = localStorage.getItem("hc_profile");
+  if (storedProfile) {
+    window.location.href = "/";
   }
-}
 
-continueBtn.onclick = async () => {
-  const profile = window.currentProfile;
-  if (!profile) return showMessage("No profile data loaded.");
+  function showMessage(msg) {
+    messageBox.textContent = msg;
+    messageBox.classList.remove("hidden");
+  }
 
-  try {
-    const { data: existingUsers, error: selectError } = await supabase
-      .from("users")
-      .select("*")
-      .or(`id.eq.${profile.id},email.eq.${profile.email}`)
-      .single();
-
-    if (selectError && selectError.code !== 'PGRST116') throw selectError; 
-
-    if (existingUsers) {
-      localStorage.setItem("hc_profile", JSON.stringify(existingUsers));
-    } else {
-      const { data, error } = await supabase
-        .from("users")
-        .insert([{
-          id: profile.id,
-          name: profile.name,
-          email: profile.email,
-          profile_url: profile.profile_url
-        }])
-        .select()
-        .single();
-
-      if (error) throw error;
-
-      localStorage.setItem("hc_profile", JSON.stringify(data));
+  function initializeGoogleSignIn() {
+    if (!window.google || !google.accounts || !google.accounts.id) {
+      console.log("Google API not loaded yet, retrying...");
+      setTimeout(initializeGoogleSignIn, 100);
+      return;
     }
 
-    window.location.href = "/";
-  } catch (err) {
-    showMessage(err.message || "Failed to save user.");
-  }
-};
+    google.accounts.id.initialize({
+      client_id: "549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com",
+      callback: handleCredentialResponse
+    });
 
-function showMessage(msg) {
-  messageBox.textContent = msg;
-  messageBox.classList.remove("hidden");
-}
+    google.accounts.id.renderButton(
+      document.getElementById("buttonDiv"),
+      {
+        theme: "outline",
+        size: "large",
+        text: "continue_with",
+        shape: "pill"
+      }
+    );
+
+    google.accounts.id.prompt(); // optional auto prompt
+  }
+
+  function handleCredentialResponse(response) {
+    try {
+      const data = JSON.parse(atob(response.credential.split('.')[1]));
+      userAvatar.src = data.picture;
+      userName.textContent = data.name;
+      userEmail.textContent = data.email;
+
+      profilePreview.classList.remove("hidden");
+
+      window.currentProfile = {
+        id: data.sub,
+        name: data.name,
+        email: data.email,
+        profile_url: data.picture
+      };
+    } catch (err) {
+      showMessage("Failed to parse Google profile.");
+    }
+  }
+
+  continueBtn.onclick = async () => {
+    const profile = window.currentProfile;
+    if (!profile) return showMessage("No profile data loaded.");
+
+    try {
+      // Check existing user
+      const { data: existingUser, error: selectError } = await supabase
+        .from("users")
+        .select("*")
+        .or(`id.eq.${profile.id},email.eq.${profile.email}`)
+        .maybeSingle();
+
+      if (selectError) throw selectError;
+
+      if (existingUser) {
+        localStorage.setItem("hc_profile", JSON.stringify(existingUser));
+      } else {
+        const { data, error } = await supabase
+          .from("users")
+          .insert([{
+            id: profile.id,
+            name: profile.name,
+            email: profile.email,
+            profile_url: profile.profile_url
+          }])
+          .select()
+          .maybeSingle();
+
+        if (error) throw error;
+
+        localStorage.setItem("hc_profile", JSON.stringify(data));
+      }
+
+      window.location.href = "/";
+    } catch (err) {
+      showMessage(err.message || "Failed to save user.");
+    }
+  };
+
+  window.onload = initializeGoogleSignIn;
 </script>
+
 </body>
 </html>
-
