--- a/register.html
+++ b/register.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Register — Hybrid Chat</title>
 <link rel="icon" type="image/png" href="hybrid.png">
-<link rel="stylesheet" href="register.css">
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <style>
@@ -16,6 +15,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin: 0;
   }
   .container {
     background: white;
@@ -54,6 +54,9 @@
     margin-top: 12px;
     color: red;
   }
+  #buttonDiv {
+    margin-top: 20px;
+  }
 </style>
 </head>
 <body>
@@ -62,7 +65,7 @@
   <h2>Welcome to Starlight</h2>
   <p>Sign in with Google to continue</p>
 
-  <div id="buttonDiv" style="display:flex; justify-content:center; margin-top:20px;"></div>
+  <div id="buttonDiv"></div>
 
   <div id="profilePreview" class="hidden">
     <h3>Profile Preview</h3>
@@ -76,113 +79,111 @@
 </div>
 
 <script>
-  const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA";
-  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+const SUPABASE_URL = "https://dfzshvldanqfvfivjrqi.supabase.co";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA";
+const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-  const profilePreview = document.getElementById("profilePreview");
-  const userAvatar = document.getElementById("userAvatar");
-  const userName = document.getElementById("userName");
-  const userEmail = document.getElementById("userEmail");
-  const continueBtn = document.getElementById("continueBtn");
-  const messageBox = document.getElementById("messageBox");
+const profilePreview = document.getElementById("profilePreview");
+const userAvatar = document.getElementById("userAvatar");
+const userName = document.getElementById("userName");
+const userEmail = document.getElementById("userEmail");
+const continueBtn = document.getElementById("continueBtn");
+const messageBox = document.getElementById("messageBox");
 
-  // Redirect if already signed in
-  const storedProfile = localStorage.getItem("hc_profile");
-  if (storedProfile) {
-    window.location.href = "/";
+// Redirect if already signed in
+const storedProfile = localStorage.getItem("hc_profile");
+if (storedProfile) {
+  window.location.href = "/";
+}
+
+function showMessage(msg) {
+  messageBox.textContent = msg;
+  messageBox.classList.remove("hidden");
+}
+
+// Wait until Google API is ready
+function initializeGoogleSignIn() {
+  if (!window.google || !google.accounts || !google.accounts.id) {
+    setTimeout(initializeGoogleSignIn, 100);
+    return;
   }
 
-  function showMessage(msg) {
-    messageBox.textContent = msg;
-    messageBox.classList.remove("hidden");
-  }
+  google.accounts.id.initialize({
+    client_id: "549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com",
+    callback: handleCredentialResponse
+  });
 
-  function initializeGoogleSignIn() {
-    if (!window.google || !google.accounts || !google.accounts.id) {
-      console.log("Google API not loaded yet, retrying...");
-      setTimeout(initializeGoogleSignIn, 100);
-      return;
+  google.accounts.id.renderButton(
+    document.getElementById("buttonDiv"),
+    {
+      theme: "outline",
+      size: "large",
+      text: "signin_with",  // this works reliably
+      shape: "pill",
+      width: 250
     }
+  );
 
-    google.accounts.id.initialize({
-      client_id: "549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com",
-      callback: handleCredentialResponse
-    });
+  google.accounts.id.prompt(); // optional auto prompt
+}
 
-    google.accounts.id.renderButton(
-      document.getElementById("buttonDiv"),
-      {
-        theme: "outline",
-        size: "large",
-        text: "continue_with",
-        shape: "pill"
-      }
-    );
+function handleCredentialResponse(response) {
+  try {
+    const data = JSON.parse(atob(response.credential.split('.')[1]));
+    userAvatar.src = data.picture;
+    userName.textContent = data.name;
+    userEmail.textContent = data.email;
+    profilePreview.classList.remove("hidden");
 
-    google.accounts.id.prompt(); // optional auto prompt
+    window.currentProfile = {
+      id: data.sub,
+      name: data.name,
+      email: data.email,
+      profile_url: data.picture
+    };
+  } catch (err) {
+    showMessage("Failed to parse Google profile.");
   }
+}
 
-  function handleCredentialResponse(response) {
-    try {
-      const data = JSON.parse(atob(response.credential.split('.')[1]));
-      userAvatar.src = data.picture;
-      userName.textContent = data.name;
-      userEmail.textContent = data.email;
+continueBtn.onclick = async () => {
+  const profile = window.currentProfile;
+  if (!profile) return showMessage("No profile data loaded.");
 
-      profilePreview.classList.remove("hidden");
+  try {
+    const { data: existingUser, error: selectError } = await supabase
+      .from("users")
+      .select("*")
+      .or(`id.eq.${profile.id},email.eq.${profile.email}`)
+      .maybeSingle();
 
-      window.currentProfile = {
-        id: data.sub,
-        name: data.name,
-        email: data.email,
-        profile_url: data.picture
-      };
-    } catch (err) {
-      showMessage("Failed to parse Google profile.");
-    }
-  }
+    if (selectError) throw selectError;
 
-  continueBtn.onclick = async () => {
-    const profile = window.currentProfile;
-    if (!profile) return showMessage("No profile data loaded.");
-
-    try {
-      // Check existing user
-      const { data: existingUser, error: selectError } = await supabase
+    if (existingUser) {
+      localStorage.setItem("hc_profile", JSON.stringify(existingUser));
+    } else {
+      const { data, error } = await supabase
         .from("users")
-        .select("*")
-        .or(`id.eq.${profile.id},email.eq.${profile.email}`)
+        .insert([{
+          id: profile.id,
+          name: profile.name,
+          email: profile.email,
+          profile_url: profile.profile_url
+        }])
+        .select()
         .maybeSingle();
 
-      if (selectError) throw selectError;
-
-      if (existingUser) {
-        localStorage.setItem("hc_profile", JSON.stringify(existingUser));
-      } else {
-        const { data, error } = await supabase
-          .from("users")
-          .insert([{
-            id: profile.id,
-            name: profile.name,
-            email: profile.email,
-            profile_url: profile.profile_url
-          }])
-          .select()
-          .maybeSingle();
-
-        if (error) throw error;
-
-        localStorage.setItem("hc_profile", JSON.stringify(data));
-      }
-
-      window.location.href = "/";
-    } catch (err) {
-      showMessage(err.message || "Failed to save user.");
+      if (error) throw error;
+      localStorage.setItem("hc_profile", JSON.stringify(data));
     }
-  };
 
-  window.onload = initializeGoogleSignIn;
+    window.location.href = "/";
+  } catch (err) {
+    showMessage(err.message || "Failed to save user.");
+  }
+};
+
+window.onload = initializeGoogleSignIn;
 </script>
 
 </body>
